# leak-detect-allocator

./: Cargo.toml  ReadMe.md  build.rs
src/: alloc_internal.cpp  lib.rs
