[package]
name = "leak-detect-allocator"
version = "0.1.0"
authors = ["lynnux <lynnux@qq.com>"]
edition = "2018"
license = "MIT"
description = "Memory leak detector for nightly toolchain"
repository = "https://github.com/lynnux/leak-detect-allocator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.4"
spin = "0.5.2"
backtrace = {version = "0.3.46", default-features = false, features = ["libunwind", "libbacktrace", "dladdr", "dbghelp"]}
once_cell = "1.3.1"