[package]
name = "leak-detect-allocator"
version = "0.2.0"
authors = ["lynnux <lynnux@qq.com>"]
edition = "2018"
license = "MIT"
description = "Memory leak detector for nightly toolchain"
repository = "https://github.com/lynnux/leak-detect-allocator"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
backtrace = {version = "0.3", default-features = false, features = ["libunwind", "libbacktrace", "dladdr", "dbghelp"]}
once_cell = "1.3"
heapless = "0.7"

[build-dependencies]
cc = "1.0.68"
